* Include GitHub issue or PR if possible using link:http://...[#123] format
* Review your changelog entries
* Don't include security sensitive information in the changelog
* Include links to documentation if possible
////

= Gentics Mesh Changelog

[[v0.19.3]]
== 0.19.3 (TBD)

icon:check[] Plugins: The admin client token will no longer expire. The token was previously only valid for one hour.

[[v0.19.2]]
== 0.19.2 (02.05.2018)

icon:check[] Docker: The base image of the Gentics Mesh docker container has been reverted back to `java:openjdk-8-jre-alpine`. We will switch to Java 10 with the upcoming OrientDB 3.0.0 update.

icon:check[] UI: In some cases the UI did not load fast. We updated the caching mechanism to quickly load the UI after a new Gentics Mesh version has been deployed.

[[v0.19.1]]
== 0.19.1 (30.04.2018)

icon:plus[] REST: The `/api/v1/admin/consistency/repair` endpoint has been added. The endpoint can be used to verify and directly repair found inconsistencies. 
                  The `/api/v1/admin/consistency/check` endpoint response has been updated to also include information about the action which will be performed by `/repair` in order to repair the inconsistency.
                  You can read more about these endpoints in the https://getmesh.io/docs/beta/administration-guide.html#_database_consistency[database consistency] section in our administration documentation.

[[v0.19.0]]
== 0.19.0 (28.04.2018)

icon:bullhorn[] Plugin System

[quote]
____
This version of Gentics Mesh introduces the _Plugin System_. A detailed description of this feature can be found in our https://getmesh.io/docs/beta/plugin-system.html[Plugin System Documentation].
____

icon:plus[] The base image of the Gentics Mesh docker container has been changed to `openjdk:10-slim`.

icon:plus[] Logging: The logging verbosity has been further decreased.

[[v0.18.3]]
== 0.18.3 (25.04.2018)
